--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "s": "^1.0.0",
+    "sequelize": "^6.35.2"
+  }
 }
