--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.11.3",
     "s": "^1.0.0",
     "sequelize": "^6.35.2"
